# certipasta

./: .gitmodules  apply.sh  readme.md
.github/workflows/: main.yml  rotate.yml
infra/: Cargo.toml
infra/src/: main.rs
rust/certifier/: Cargo.toml
rust/certifier/src/: lib.rs
rust/infra/: Cargo.toml
rust/infra/src/: main.rs
rust/native/certifier/: Cargo.toml
rust/native/certifier/src/: lib.rs
rust/native/infra/: Cargo.toml
rust/native/infra/src/: main.rs
software/certifier/: Cargo.toml
software/certifier/src/: lib.rs
