[package]
name = "certifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
der = "0.7.8"
google-cloudkms1 = "5.0.3"
google-storage1 = "5.0.3"
hyper = { version = "^0", features = ["client"] }
hyper-rustls = { version = "0.24.2", features = ["webpki-roots"] }
loga = "0.1.7"
mime = "0.3.17"
pem = "3.0.3"
poem = { version = "1.3.59" }
reqwest = { version = "0.11.23", features = [
    "rustls-tls-webpki-roots",
], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
signature = "2.2.0"
spaghettinuum = { version = "0.2.2", path = "../spaghettinuum", default-features = false }
taskmanager = "0.1.2"
tokio = { version = "1.35.1", features = ["macros", "rt", "fs"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
yup-oauth2 = "8.3.1"
aargvark = { version = "0.0.7" }
governor = "0.6.0"
rand = "0.8.5"
sec1 = "0.7.3"
const-oid = "0.9.6"

[patch.crates-io]
google-apis-common = { git = "https://github.com/andrewbaxter/fork-google-apis-rs", rev = "c15eaa01b3c337f69803b4f53cbf938168035a21" }
google-cloudkms1 = { git = "https://github.com/andrewbaxter/fork-google-apis-rs", rev = "c15eaa01b3c337f69803b4f53cbf938168035a21" }
google-storage1 = { git = "https://github.com/andrewbaxter/fork-google-apis-rs", rev = "c15eaa01b3c337f69803b4f53cbf938168035a21" }
