[package]
name = "certifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
der = "0.7"
google-cloudkms1 = "5"
google-storage1 = "5"
hyper = { version = "^0", features = ["client"] }
hyper-rustls = { version = "0.24", features = ["webpki-roots"] }
loga = "0.3"
mime = "0.3"
pem = "3"
poem = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signature = "2"
spaghettinuum = { version = "0.2", path = "spaghettinuum", default-features = false }
taskmanager = "0.3"
tokio = { version = "1", features = ["macros", "rt", "fs"] }
x509-cert = { version = "0.2", features = ["builder"] }
yup-oauth2 = "8"
aargvark = { version = "0.0.8", features = ["serde_json"] }
governor = "0.6"
rand = "0.8"
sec1 = "0.7"
const-oid = "0.9"
urlencoding = "2"

[patch.crates-io]
google-apis-common = { git = "https://github.com/andrewbaxter/fork-google-apis-rs", rev = "c15eaa01b3c337f69803b4f53cbf938168035a21" }
google-cloudkms1 = { git = "https://github.com/andrewbaxter/fork-google-apis-rs", rev = "c15eaa01b3c337f69803b4f53cbf938168035a21" }
google-storage1 = { git = "https://github.com/andrewbaxter/fork-google-apis-rs", rev = "c15eaa01b3c337f69803b4f53cbf938168035a21" }
